--- a/manual/emacspeak_002dbookshare.html
+++ b/manual/emacspeak_002dbookshare.html
@@ -910,10 +910,8 @@ s Full Text Search
 d Date Search
 b Browse
 
-key             binding
-—             ——-
-
-ESC             Prefix Command
+Key             Binding
+——————————————————————————-
 SPC             emacspeak-bookshare-expand-at-point
 +               emacspeak-bookshare-action
 /               emacspeak-bookshare-action
