--- a/manual/emacspeak_002depub.html
+++ b/manual/emacspeak_002depub.html
@@ -214,9 +214,8 @@
               <pre class="format">A Calibre Front-end.
 Letters do not insert themselves; instead, they are commands.
 
-key             binding
-—             ——-
-
+Key             Binding
+——————————————————————————-
 RET             emacspeak-epub-calibre-dired-at-point
 
 In addition to any hooks its parent mode ‘special-mode’ might have
@@ -855,16 +854,14 @@ With interactive prefix arg ‘download’, download the epub.
             <div class="format">
               <pre class="format">An EPub Front-end.
 Letters do not insert themselves; instead, they are commands.
-key             binding
-—             ——-
 
+Key             Binding
+——————————————————————————-
 C-a             emacspeak-epub-bookshelf-add-directory
 C-d             emacspeak-epub-bookshelf-remove-directory
 C-l             emacspeak-epub-bookshelf-redraw
 RET             emacspeak-epub-eww
 C-o             emacspeak-epub-bookshelf-open-epub
-C-x             Prefix Command
-ESC             Prefix Command
 /               emacspeak-epub-calibre-results
 A               emacspeak-epub-bookshelf-calibre-author
 C               emacspeak-epub-gutenberg-catalog
