--- a/manual/emacspeak_002dfiltertext.html
+++ b/manual/emacspeak_002dfiltertext.html
@@ -136,9 +136,8 @@
               <pre class=
               "format">Major mode for FilterText interaction. 
 
-key             binding
-—             ——-
-
+Key             Binding
+——————————————————————————-
 =               keep-lines
 ^               flush-lines
 r               emacspeak-filtertext-revert
