--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -1366,12 +1366,10 @@ Interactive prefix ‘raw’ reads a raw URL.
               <pre class=
               "format">Major mode for m-player interaction. 
 
-key             binding
-—             ——-
-
+Key             Binding
+——————————————————————————-
 C-l             ladspa
 RET             emacspeak-m-player-load
-ESC             Prefix Command
 SPC             emacspeak-m-player-pause
 %               emacspeak-m-player-display-percent
 (               emacspeak-m-player-left-channel
@@ -2375,12 +2373,10 @@ Optional prefix arg ‘best’ chooses highest.
               "format">Start or control Emacspeak multimedia player.
 Controls media playback when already playing.
 
-key             binding
-—             ——-
-
+Key             Binding
+——————————————————————————-
 C-l             ladspa
 RET             emacspeak-m-player-load
-ESC             Prefix Command
 SPC             emacspeak-m-player-pause
 %               emacspeak-m-player-display-percent
 (               emacspeak-m-player-left-channel
@@ -2449,7 +2445,6 @@ DEL             emacspeak-m-player-reset-speed
 M-,             emacspeak-m-player-set-clip-start
 M-.             emacspeak-m-player-set-clip-end
 M-l             emacspeak-m-player-load-playlist
-
 .
 </pre>
             </div>
