--- a/manual/emacspeak_002dmaths.html
+++ b/manual/emacspeak_002dmaths.html
@@ -377,9 +377,8 @@ This mode is similar to Emacs’ ‘view-mode’.
 see the key-binding list at the end of this description.
 Emacs online help facility to look up help on these commands.
 
-key             binding
-—             ——-
-
+Key             Binding
+——————————————————————————-
 [               backward-page
 ]               forward-page
 h               emacspeak-maths-left
