--- a/manual/emacspeak_002docr.html
+++ b/manual/emacspeak_002docr.html
@@ -322,9 +322,9 @@ in constructing the name of the image and text files.
 
 Key Bindings: 
 
-See key             binding
-—             ——-
-
+See 
+Key             Binding
+——————————————————————————-
 RET             emacspeak-ocr-scan-and-recognize
 SPC             emacspeak-ocr-read-current-page
 1 .. 9          emacspeak-ocr-page
@@ -344,7 +344,6 @@ p               emacspeak-ocr-page
 q               bury-buffer
 s               emacspeak-ocr-save-current-page
 w               emacspeak-ocr-write-document
-
 .
 
 In addition to any hooks its parent mode ‘text-mode’ might have run,
