--- a/manual/emacspeak_002dtable_002dui.html
+++ b/manual/emacspeak_002dtable_002dui.html
@@ -627,15 +627,14 @@ feature. Note that you can intersperse meaningful strings in the list that
 specifies the filter.
 
 Full List Of Keybindings:
-key             binding
-—             ——-
 
+Key             Binding
+——————————————————————————-
 C-b             emacspeak-table-previous-column
 C-f             emacspeak-table-next-column
 TAB             emacspeak-table-next-column
 C-n             emacspeak-table-next-row
 C-p             emacspeak-table-previous-row
-ESC             Prefix Command
 SPC             emacspeak-table-speak-current-element
 #               emacspeak-table-sort-on-current-column
 ,               emacspeak-table-find-csv-file
