--- a/manual/emacspeak_002dwebspace.html
+++ b/manual/emacspeak_002dwebspace.html
@@ -242,11 +242,9 @@ Updated headlines found in emacspeak-webspace-headlines.
               <pre class=
               "format">Major mode for Webspace interaction.
 
-key             binding
-—             ——-
-
+Key             Binding
+——————————————————————————-
 TAB             forward-button
-ESC             Prefix Command
 ’         emacspeak-speak-rest-of-buffer
 .               emacspeak-webspace-filter
 /               search-forward
