--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -2033,9 +2033,6 @@ In addition to any hooks its parent mode ‘special-mode’ might have
 run, this mode runs the hook ‘emacspeak-wizards-finder-mode-hook’, as
 the final or penultimate step during initialization.
 
-key             binding
-—             ——-
-
 </pre>
             </div>
           </dd>
@@ -3609,9 +3606,8 @@ Optional interactive prefix arg ‘category’ prompts for a category.
               <pre class=
               "format">Major mode for interactively viewing virtual console contents.
 
-key             binding
-—             ——-
-
+Key             Binding
+——————————————————————————-
 C-l             emacspeak-wizards-vc-viewer-refresh
 
 In addition to any hooks its parent mode ‘special-mode’ might have
