--- a/manual/ladspa.html
+++ b/manual/ladspa.html
@@ -186,9 +186,8 @@ In addition to any hooks its parent mode ‘special-mode’ might have
 run, this mode runs the hook ‘ladspa-mode-hook’, as the final or
 penultimate step during initialization.
 
-key             binding
-—             ——-
-
+Key             Binding
+——————————————————————————-
 RET             ladspa-instantiate
 SPC             ladspa-analyse-plugin-at-point
 a               emacspeak-m-player-add-ladspa
