--- a/manual/gmaps.html
+++ b/manual/gmaps.html
@@ -261,11 +261,9 @@ In addition to any hooks its parent mode ‘special-mode’ might have
 run, this mode runs the hook ‘gmaps-mode-hook’, as the final or
 penultimate step during initialization.
 
-key             binding
-—             ——-
-
+Key             Binding
+——————————————————————————-
 TAB             forward-button
-ESC             Prefix Command
 SPC             gmaps-place-details
 [               backward-page
 ]               forward-page
