--- a/announcements/ANNOUNCE-55.html
+++ b/announcements/ANNOUNCE-55.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-11-14 Sun 10:28 -->
+<!-- 2021-11-20 Sat 09:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Announcing Emacspeak 55.0—CalmDog!</title>
@@ -201,16 +201,16 @@
 The enjoyment of one's tools is an essential ingredient of successful work. &#x2013; Donald E. Knuth
 </p>
 
-<div id="outline-container-org1231b0b" class="outline-2">
-<h2 id="org1231b0b"><span class="section-number-2">1.</span> For Immediate Release:</h2>
+<div id="outline-container-org458a930" class="outline-2">
+<h2 id="org458a930"><span class="section-number-2">1.</span> For Immediate Release:</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 San Jose, CA, (Nov 24, 2021)
 </p>
 </div>
 
-<div id="outline-container-org2fbced9" class="outline-3">
-<h3 id="org2fbced9"><span class="section-number-3">1.1.</span> Emacspeak 55.0 (CalmDog)  Unleashed!  🦮</h3>
+<div id="outline-container-orgbf9ddd1" class="outline-3">
+<h3 id="orgbf9ddd1"><span class="section-number-3">1.1.</span> Emacspeak 55.0 (CalmDog)  Unleashed!  🦮</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 &#x2014; Making Accessible Computing Effortless!
@@ -232,8 +232,8 @@ working efficiently and effectively from anywhere!
 </div>
 </div>
 
-<div id="outline-container-org48e6ba5" class="outline-2">
-<h2 id="org48e6ba5"><span class="section-number-2">2.</span> Investors Note:</h2>
+<div id="outline-container-org648436e" class="outline-2">
+<h2 id="org648436e"><span class="section-number-2">2.</span> Investors Note:</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 With several prominent tweeters expanding coverage of <span class="underline">#emacspeak</span>,
@@ -245,8 +245,8 @@ in the tech sector.
 </div>
 </div>
 
-<div id="outline-container-org6de48fb" class="outline-2">
-<h2 id="org6de48fb"><span class="section-number-2">3.</span> What Is It?</h2>
+<div id="outline-container-orga01459f" class="outline-2">
+<h2 id="orga01459f"><span class="section-number-2">3.</span> What Is It?</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Emacspeak is a fully functional audio desktop that provides complete
@@ -254,7 +254,7 @@ eyes-free access to all major 32 and 64 bit operating environments. By
 seamlessly blending live access to all aspects of the Internet such as
 ubiquitous assistance, Web-surfing, blogging, remote software
 development, social computing and electronic messaging into the audio
-desktop, Emacspeak enables speech access to local and remote
+desktop, Emacspeak enables spoken access to local and remote
 information with a consistent and well-integrated user interface. A
 rich suite of task-oriented tools provides efficient speech-enabled
 access to the evolving assistant-oriented social Internet cloud.
@@ -262,13 +262,13 @@ access to the evolving assistant-oriented social Internet cloud.
 </div>
 </div>
 
-<div id="outline-container-orgd5f1874" class="outline-2">
-<h2 id="orgd5f1874"><span class="section-number-2">4.</span> Major Enhancements:</h2>
+<div id="outline-container-org32377e2" class="outline-2">
+<h2 id="org32377e2"><span class="section-number-2">4.</span> Major Enhancements:</h2>
 <div class="outline-text-2" id="text-4">
 <ol class="org-ol">
 <li>Speech-enable Emacs Application Framework  </li>
 <li>Updated Soundscapes 🔊</li>
-<li>Updated Auditory Icons 🕬</li>
+<li>Updated Auditory Icons 🎧</li>
 <li>Updated Transient Support 𝥍</li>
 <li>Speech-Enabled CalibreDB  📚</li>
 <li><p>
@@ -280,15 +280,14 @@ External Browsers From EWW  🕸
 </p></li>
 </ol>
 
-
 <p>
 Note: This version <b>requires</b> emacs-27.1 or later. 
 </p>
 </div>
 </div>
 
-<div id="outline-container-orga9ddec2" class="outline-2">
-<h2 id="orga9ddec2"><span class="section-number-2">5.</span> Establishing Liberty, Equality And Freedom:</h2>
+<div id="outline-container-orgba428e9" class="outline-2">
+<h2 id="orgba428e9"><span class="section-number-2">5.</span> Establishing Liberty, Equality And Freedom:</h2>
 <div class="outline-text-2" id="text-5">
 <p>
   Never a toy system, Emacspeak is voluntarily bundled with all
@@ -305,7 +304,7 @@ and the underlying GIT versioning software used to develop and distribute the sy
 <p>
 Extensive studies have shown that thanks to these features, users
 consider Emacspeak to be absolutely priceless. Thanks to this
-wide-spread user demand, the present version remains   priceless
+wide-spread user demand, the present version remains   free of cost 
 as ever—it is being made available at the same zero-cost as
 previous releases.
 </p>
@@ -332,8 +331,8 @@ press releases.
 </div>
 </div>
 
-<div id="outline-container-org4357a10" class="outline-2">
-<h2 id="org4357a10"><span class="section-number-2">6.</span> Independent Test Results:</h2>
+<div id="outline-container-org3ac4067" class="outline-2">
+<h2 id="org3ac4067"><span class="section-number-2">6.</span> Independent Test Results:</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Independent test results have proven that unlike some modern (and
@@ -347,8 +346,8 @@ computer&#x2013; that stops functioning when Emacspeak is uninstalled!”.
 </p>
 </div>
 
-<div id="outline-container-org509e012" class="outline-3">
-<h3 id="org509e012"><span class="section-number-3">6.1.</span> Note from Aster,Bubbles and Tilden:</h3>
+<div id="outline-container-org3dc256b" class="outline-3">
+<h3 id="org3dc256b"><span class="section-number-3">6.1.</span> Note from Aster,Bubbles and Tilden:</h3>
 <div class="outline-text-3" id="text-6-1">
 <p>
 UnDoctored Videos Inc. is looking for volunteers to star in a
@@ -358,8 +357,8 @@ video demonstrating such complete user failure.
 </div>
 </div>
 
-<div id="outline-container-orgaab5801" class="outline-2">
-<h2 id="orgaab5801"><span class="section-number-2">7.</span> Obtaining Emacspeak:</h2>
+<div id="outline-container-org13d725e" class="outline-2">
+<h2 id="org13d725e"><span class="section-number-2">7.</span> Obtaining Emacspeak:</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 Emacspeak can be downloaded from GitHub &#x2014; see
@@ -376,8 +375,8 @@ The latest development snapshot of Emacspeak is always available at
 </div>
 </div>
 
-<div id="outline-container-org5ec35de" class="outline-2">
-<h2 id="org5ec35de"><span class="section-number-2">8.</span> History:</h2>
+<div id="outline-container-org11d427d" class="outline-2">
+<h2 id="org11d427d"><span class="section-number-2">8.</span> History:</h2>
 <div class="outline-text-2" id="text-8">
 <ul class="org-ul">
 <li>Emacspeak 55.0 (CalmDog) attempts to be as calm as Tilden.</li>
@@ -529,8 +528,8 @@ to provide the first fully interactive speech-enabled WebTop.</li>
 </div>
 </div>
 
-<div id="outline-container-org9a05f66" class="outline-2">
-<h2 id="org9a05f66"><span class="section-number-2">9.</span> About Emacspeak:</h2>
+<div id="outline-container-orgd434354" class="outline-2">
+<h2 id="orgd434354"><span class="section-number-2">9.</span> About Emacspeak:</h2>
 <div class="outline-text-2" id="text-9">
 <p>
 Originally based at Cornell (NY) —
@@ -545,19 +544,17 @@ National Museum of American History.
 </p>
 
 <p>
-The Emacspeak mailing list is archived at Vassar &#x2013;the home of the
+The Emacspeak mailing list is archived at
+<a href="https://www.emacspeak.org">Emacspeak Mail Archive</a> &#x2013;the home of the
 Emacspeak mailing list&#x2013; thanks to Greg Priest-Dorman, and provides a
-valuable knowledge base for new users. Note that we are currently
-looking for a new home for the mailing list &#x2014; stay tuned; in the
-meantime, the list is available via
-<b>nntp+news.gmane.io:gmane.emacs.emacspeak.general</b>
-from within Gnus.
+valuable knowledge base for new users.
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgbe294ca" class="outline-2">
-<h2 id="orgbe294ca"><span class="section-number-2">10.</span> Press/Analyst Contact: Tilden Labrador</h2>
+
+<div id="outline-container-org3940d8e" class="outline-2">
+<h2 id="org3940d8e"><span class="section-number-2">10.</span> Press/Analyst Contact: Tilden Labrador</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 Going forward, Tilden acknowledges his exclusive monopoly on
@@ -589,7 +586,7 @@ their respective owners.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2021-11-14 Sun 10:28</p>
+<p class="date">Created: 2021-11-20 Sat 09:05</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
