--- a/html/emacspeak.html
+++ b/html/emacspeak.html
@@ -37,7 +37,7 @@
 
       <tr class="navbar">
         <td><a href=
-               "https://github.com/tvraman/emacspeak/releases/download/51.0/emacspeak-51.0.tar.bz2">Download</a></td>
+               "https://github.com/tvraman/emacspeak/releases/download/55.0/emacspeak-54.0.tar.bz2">Download</a></td>
         <td><a href=
                "https://github.com/tvraman/emacspeak">Sources</a></td>
         <td><a href="http://tvraman.github.io/emacspeak/manual/">Manual</a></td>
@@ -47,7 +47,7 @@
         <td><a href="https://tvraman.github.io/emacspeak/applications.html">Tools</a></td>
         <td><a href="http://emacspeak.blogspot.com">Blog</a></td>
         <td><a href=
-               "http://www.cs.vassar.edu/~priestdo/emacspeak/">Support</a></td>
+               "https://www.emacspeak.org">Support</a></td>
       </tr>
 
       <tr>
@@ -61,7 +61,7 @@
     </table><!-- } -->
 
     <p>Emacspeak Inc (NASDOG: ESPK) announces immediate world-wide
-    availability of Emacspeak 51.0 (AKA  AssistDog) --a powerful audio desktop for
+    availability of Emacspeak 55.0 (AKA  CalmDog) --a powerful audio desktop for
     leveraging today's evolving semantic and Assistive Internet Cloud.</p>
 
     <p>Emacspeak is a speech interface that allows visually impaired
@@ -85,18 +85,18 @@
     speech-friendly solution that opens up the Internet to visually
     impaired users around the world.</p>
 
-    <form method="get" action="https://www.google.com/custom">
+    <form method="get" action="https://www.google.com/search">
       <p><strong>Search Using Google</strong><br />
-      <label for="q">Look for:</label> <input accesskey="/" id="q"
-      type="text" size="15" name="q" maxlength="255" /> <input type=
-      "submit" value="Go" /><br />
-      <label for="emsearch">Search emacspeak.sf.net</label>
-      <input accesskey="e" id="emsearch" type="radio" name=
-             "sitesearch" checked="checked" value=
-             "emacspeak.sourceforge.net" /> <label for="web">Search
-      WWW</label> <input accesskey="w" type="radio" name="sitesearch"
-      id="web" value="" /> <input type="hidden" name="domains" value=
-      "emacspeak.sf.net" /></p>
+      <label for="q">Look for:</label>
+      <input accesskey="/" id="q" type="text" size="15" name="q" />
+      <input type= "submit" value="Go" /><br />
+<label for="mailsearch">Search Mail Archives</label>
+      <input accesskey="m" id="mailsearch" type="radio" name= "sitesearch"  value= "emacspeak.org" /><br/>
+      <label for="emsearch">Search emacspeak.blogspot.com</label>
+      <input accesskey="b" id="emsearch" type="radio" name= "sitesearch"  value= "emacspeak.blogspot.com" /><br/>
+      <label for="web">Search WWW</label>
+      <input accesskey="w" type="radio" name="sitesearch" id="web" value="" />
+      <input type="hidden" name="domains" value= "emacspeak.sf.net" /></p>
       </form><br />
 
       <p>See the <a href="http://tvraman.github.io/emacspeak/manual/">online manual</a>, <a href=
@@ -129,15 +129,23 @@
       Announcements</a></h2>
 
       <ul>
-<li><a href="releases/release-51 .0.html">Announcing Emacspeak
-        51 .0 (AssistDog)</a></li>
-         <li><a href="releases/release-50 .0.html">Announcing Emacspeak
-        50 .0 (SageDog)</a></li>
-        <li><a href="releases/release-49 .0.html">Announcing Emacspeak
-        49 .0 (WiseDog)</a></li>
-         <li><a href="releases/release-48 .0.html">Announcing Emacspeak
+<li><a href="releases/release-55.0.html">Announcing Emacspeak
+        55.0 (CalmDog)</a></li>
+<li><a href="releases/release-54.0.html">Announcing Emacspeak
+        54.0 (EZDog)</a></li>
+        <li><a href="releases/release-53.0.html">Announcing Emacspeak
+        53.0 (EfficientDog)</a></li>
+<li><a href="releases/release-52.0.html">Announcing Emacspeak
+        52.0 (WorkAtHomeDog)</a></li>
+<li><a href="releases/release-51.0.html">Announcing Emacspeak
+        51.0 (AssistDog)</a></li>
+         <li><a href="releases/release-50.0.html">Announcing Emacspeak
+        50.0 (SageDog)</a></li>
+        <li><a href="releases/release-49.0.html">Announcing Emacspeak
+        49.0 (WiseDog)</a></li>
+         <li><a href="releases/release-48.0.html">Announcing Emacspeak
         48.0 (ServiceDog)</a></li>
- <li><a href="releases/release-47 .0.html">Announcing Emacspeak
+ <li><a href="releases/release-47.0.html">Announcing Emacspeak
         47.0 (GentleDog)</a></li>
          <li><a href="releases/release-46.0.html">Announcing Emacspeak
         46.0 (HelpfulDog)</a></li>
@@ -358,17 +366,17 @@
       <h2><a id="mailingList" name="mailingList">Emacspeak Mailing
       List</a></h2>
 
-      <p>There is a mailing list <em>emacspeak@cs.vassar.edu</em> used
+      <p>There is a mailing list <em>emacspeak@emacspeak.org</em> used
       to disseminate information about emacspeak. If you use Emacspeak,
-      you can subscribe by sending email to <a href=
-      "mailto:emacspeak-request@cs.vassar.edu">the list request address
+      you can subscribe via <a href=
+      "https://www.emacspeak.org">emacspeak.org Site
       (maintained by) greg e. priest-dorman</a>.</p>
 
       <h2><a id="support" name="support">Support And
       Documentation</a></h2>
 
       <p>The Emacspeak mailing list archived at <a href=
-      "http://www.cs.vassar.edu/~priestdo/emacspeak/">Vassar</a> --the
+      "https://mail.emacspeak.org">Emacspeak.org</a> --the
       home of the Emacspeak mailing list-- (thanks to Greg
       Priest-Dorman) is another important source of frequently asked
       questions along with answers. Before you post a question, make
@@ -384,10 +392,9 @@
       time, and cannot answer questions on Emacspeak via personal
       email. If you do download and use Emacspeak, please participate
       in the Emacspeak community by subscribing to the mailing list
-      <em>emacspeak@cs.vassar.edu</em>by sending a message to
+      <em>emacspeak@emacspeak.org</em>via the 
       <em><a href=
-             "mailto:emacspeak-request@cs.vassar.edu">emacspeak-request@cs.vassar.edu</a></em>
-      .</p>
+             "https://mail.emacspeak.org">emacspeak list</a></em> .</p>
 
       <h2><a id="synths" name="synths">Synthesizer Support</a></h2>
 
