--- a/manual/Leveraging-Computational-Tools-_002d_002d_002d-From-SQL-And-R-To-IPython-Notebooks.html
+++ b/manual/Leveraging-Computational-Tools-_002d_002d_002d-From-SQL-And-R-To-IPython-Notebooks.html
@@ -100,9 +100,9 @@
     domain. IPython Notebooks provide an easy means of reaching a
     large audience when publishing technical material with
     interactive computational content; module <strong>ein</strong>
-    brings the power and convenience of Emacs ’ editting facilities
+    brings the power and convenience of Emacs ’ editing facilities
     when developing the content. Speech-enabling package
-    <strong>ein</strong> is a major win since editting program
+    <strong>ein</strong> is a major win since editing program
     source code in an eyes-free environment is far smoother in
     Emacs than in a browser-based editor.</p>
   </div>
