--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -2839,6 +2839,8 @@ t   :  tops/last
             <div class="format">
               <pre class="format">Open a frame on a remote Emacs.
 Remote workstation is  ‘emacspeak-wizards-remote-workstation’.
+Works best when you already are ssh-impel-ed in and have a talking
+  remote Emacs in   a local XTerm.
 </pre>
             </div>
           </dd>
