--- a/manual/sox_002dgen.html
+++ b/manual/sox_002dgen.html
@@ -200,7 +200,7 @@
             <div class="format">
               <pre class=
               "format">Play binaural audio with beat-spec specifying the various tones.
-Param ‘beat-spec-list’ is a list of ‘(carrier beat) tupples.
+Param ‘beat-spec-list’ is a list of ‘(carrier beat) tuples.
 
 (fn LENGTH BEAT-SPEC-LIST GAIN)
 </pre>
