--- a/manual/Speech_002dEnabling-Interactive-Games.html
+++ b/manual/Speech_002dEnabling-Interactive-Games.html
@@ -65,7 +65,7 @@
     <h4 class="subsection">15.9.1 Speech-Enabling Interactive
     Games</h4>
     <p>So in 1997, I went the next step in asking — given access to
-    the underlying infromation, is it possible to build effective
+    the underlying information, is it possible to build effective
     eyes-free interaction to highly interactive tasks? I picked
     <strong>Tetris</strong> as a means of exploring this space, the
     result was an Emacspeak extension to speech-enable module
@@ -82,8 +82,8 @@
     <p>Speech-enabling games for effective eyes-free interaction
     has proven highly educational. Interactive games are typically
     built to challenge the user, and if the eyes-free interface is
-    inefficient, you just wont play the game — contrast this with a
-    task that you <strong>must</strong> perform, where you’re
+    inefficient, you just won’t play the game — contrast this with
+    a task that you <strong>must</strong> perform, where you’re
     likely to make do with a sub-optimal interface. Over the years,
     Emacspeak has come to include eyes-free interfaces to several
     games including <a href=
