--- a/etc/applications.html
+++ b/etc/applications.html
@@ -928,7 +928,7 @@ module emacspeak-evil speech-enables EVIL.</td>
 <td>
       Emacs front-end  to OCR engines.
       This module provides speech-enabled access to image
-      aquisition and  document recognition tools
+      acquisition and  document recognition tools
       available on the underlying platform.
     </td>
 </tr>
@@ -1281,7 +1281,7 @@ module emacspeak-vdiff.</td>
 <td><a id="units">units</a></td>
 <td>
       Simple wizard for accessing Units tool
-      --- a powerful units convertor.
+      --- a powerful units converter.
     </td>
 </tr>
 <tr><td colspan="3"><h2><a name="programming" id=" programming"> PROGRAMMING     
@@ -1375,7 +1375,7 @@ module emacspeak-vdiff.</td>
       Emacs Class Browser with support for Java, C++, C
       and other popular languages.
       Provides navigable table of contents as well as a browsable method and
-      function index  for the file being editted.
+      function index  for the file being edited.
     </td>
 </tr>
 <tr>
@@ -1390,10 +1390,10 @@ module emacspeak-vdiff.</td>
 <td>14</td>
 <td><a id="c">c</a></td>
 <td>
-      Editting support for C, C++  and related languages with full aural
+      Editing support for C, C++  and related languages with full aural
       highlighting and semantic support.
       Provides contextual spoken feedback using semantic context
-      of code being editted.
+      of code being edited.
     </td>
 </tr>
 <tr>
@@ -1408,7 +1408,7 @@ module emacspeak-vdiff.</td>
 <td>16</td>
 <td><a id="perl">perl</a></td>
 <td>
-      Editting support for Perl.
+      Editing support for Perl.
       Features  aural highlighting and easy access to
       online help.
     </td>
@@ -1417,7 +1417,7 @@ module emacspeak-vdiff.</td>
 <td>17</td>
 <td><a id="ruby">ruby</a></td>
 <td>
-      Speech-enables editting support for Ruby.
+      Speech-enables editing support for Ruby.
       Features  aural highlighting and easy access to
       online help.
     </td>
@@ -1426,7 +1426,7 @@ module emacspeak-vdiff.</td>
 <td>18</td>
 <td><a id="lua">lua</a></td>
 <td>
-      Editting support for interactive LUA  development.
+      Editing support for interactive LUA  development.
       Features aural highlighting, structured browsing and debugging.
     </td>
 </tr>
@@ -1434,7 +1434,7 @@ module emacspeak-vdiff.</td>
 <td>19</td>
 <td><a id="Go">Go</a></td>
 <td>
-      Editting support for interactive Go  development.
+      Editing support for interactive Go  development.
       Features aural highlighting, structured browsing and debugging.
     </td>
 </tr>
@@ -1470,7 +1470,7 @@ module emacspeak-vdiff.</td>
 <td>23</td>
 <td><a id="python">python</a></td>
 <td>
-      Editting support for interactive Python development.
+      Editing support for interactive Python development.
       Features aural highlighting, structured browsing and debugging.
     </td>
 </tr>
@@ -1501,7 +1501,7 @@ module emacspeak-vdiff.</td>
 <td>27</td>
 <td><a id="generic">generic</a></td>
 <td>
-      Editting support for JavaScript and  Apache configuration files
+      Editing support for JavaScript and  Apache configuration files
       with voice locking and structured navigation.
     </td>
 </tr>
@@ -1516,21 +1516,21 @@ module emacspeak-vdiff.</td>
 <td>29</td>
 <td><a id="make-mode">make-mode</a></td>
 <td>
-      Editting support for creating and maintaining Makefiles.
+      Editing support for creating and maintaining Makefiles.
     </td>
 </tr>
 <tr>
 <td>30</td>
 <td><a id="sh-script">sh-script</a></td>
 <td>
-      Editting support for shell scripts.
+      Editing support for shell scripts.
     </td>
 </tr>
 <tr>
 <td>31</td>
 <td><a id="rpm-spec">rpm-spec</a></td>
 <td>
-      Editting support for RPM spec files.
+      Editing support for RPM spec files.
     </td>
 </tr>
 <tr>
@@ -1545,7 +1545,7 @@ module emacspeak-vdiff.</td>
 <td>33</td>
 <td><a id="dmacro">dmacro</a></td>
 <td>
-      Dynamic macro package for template-based editting.
+      Dynamic macro package for template-based editing.
     </td>
 </tr>
 <tr>
