--- a/announcements/ANNOUNCE-55.html
+++ b/announcements/ANNOUNCE-55.html
@@ -443,7 +443,7 @@ access.</li>
 <li>Emacspeak 31.0 AKA TweetDog — adds tweeting to the Emacspeak
 desktop.</li>
 <li>Emacspeak 30.0 AKA SocialDog brings the Social Web to the
-audio desktop—you cant but be social if you speak!</li>
+audio desktop—you can't but be social if you speak!</li>
 <li>Emacspeak 29.0—AKAAbleDog—is a testament to the resilliance and innovation
 embodied by Open Source software—it would not exist without the
 thriving Emacs community that continues to ensure that Emacs remains
