--- a/manual/URL-Templates.html
+++ b/manual/URL-Templates.html
@@ -64,7 +64,7 @@
     <hr />
     <span id="URL-Templates-1"></span>
     <h3 class="section">12.233 URL Templates</h3>
-    <p>This section documents a total of 73 URL Templates.</p>
+    <p>This section documents a total of 74 URL Templates.</p>
     <p>All of these URL templates can be invoked via command
     <kbd>M-x emacspeak-url-template-fetch</kbd> normally bound to
     <kbd>C-e u &lt;fn&gt; u</kbd>. This command prompts for the
@@ -148,6 +148,10 @@
       <li>
         <b>CIA World Fact Book</b>
         <p>Open CIA World Fact Book For Specified Country.</p>
+      </li>
+      <li>
+        <b>CNBC Using EAF</b>
+        <p>Play CNBC Using EAF</p>
       </li>
       <li>
         <b>CNN Content</b>
