--- a/manual/emacspeak_002dmaths.html
+++ b/manual/emacspeak_002dmaths.html
@@ -92,6 +92,16 @@
       CSS as implemented in Emacspeak, This allows us to map these
       expressions to aural properties supported by specific TTS
       engines.</p>
+      <p>Start the server/client: M-x emacspeak-maths-start. Once
+      the server and client are started, you can browse any number
+      of math expressions using the emacspeak-maths-navigator
+      defined in module See <a href=
+      "#emacspeak_002dmaths">emacspeak-maths</a> as described
+      below.</p>
+      <p>Note: In general, once everything is configured correctly,
+      using the maths navigator automatically starts the server and
+      client. Invoke the Navigator using <kbd>s-spc</kbd> — this is
+      the &lt;windows&gt; key on</p>
     </div>
     <div class="subsection" id="Emacspeak_002dMaths-Commands">
       <h4 class="subsection">12.120.3 Emacspeak-Maths Commands</h4>
