--- a/manual/emacspeak_002dmaths.html
+++ b/manual/emacspeak_002dmaths.html
@@ -101,7 +101,7 @@
       <p>Note: In general, once everything is configured correctly,
       using the maths navigator automatically starts the server and
       client. Invoke the Navigator using <kbd>s-spc</kbd> — this is
-      the &lt;windows&gt; key on</p>
+      the &lt;windows&gt; key on Linux laptops.</p>
     </div>
     <div class="subsection" id="Emacspeak_002dMaths-Commands">
       <h4 class="subsection">12.120.3 Emacspeak-Maths Commands</h4>
