--- a/manual/emacspeak_002dmuggles.html
+++ b/manual/emacspeak_002dmuggles.html
@@ -453,7 +453,7 @@ The heads for the associated hydra are:
 "p":    ‘emacspeak-muggles-lispy-or-sp’,
 "t":    ‘(call-interactively #’toggle-truncate-lines)’,
 "u":    ‘(call-interactively #’ido-ubiquitous-mode)’,
-"q":    ‘nil’
+"q":    nil
 
 The body can be accessed via ‘emacspeak-muggles-toggle-option/body’.
 </pre>
