--- a/manual/extra_002dmuggles.html
+++ b/manual/extra_002dmuggles.html
@@ -194,7 +194,7 @@ The heads for the associated hydra are:
 "?":    ‘Info-summary’,
 "h":    ‘Info-help’,
 "q":    ‘quit-window’,
-"C-g":    ‘nil’
+"C-g":    nil
 
 The body can be accessed via ‘emacspeak-muggles-info-summary/body’.
 </pre>
@@ -335,7 +335,7 @@ The heads for the associated hydra are:
 "p":    ‘outline-previous-visible-heading’,
 "f":    ‘outline-forward-same-level’,
 "b":    ‘outline-backward-same-level’,
-"z":    ‘nil’
+"z":    nil
 
 The body can be accessed via ‘emacspeak-muggles-outliner/body’.
 </pre>
@@ -468,7 +468,7 @@ The heads for the associated hydra are:
 ".":    ‘set-mark-command’,
 "/":    ‘View-search-regexp-forward’,
 "&lt;":    ‘beginning-of-buffer’,
-"&lt;return&gt;":    ‘nil’,
+"&lt;return&gt;":    nil,
 "=":    ‘what-line’,
 "&gt;":    ‘end-of-buffer’,
 "@":    ‘View-back-to-mark’,
@@ -495,7 +495,7 @@ The heads for the associated hydra are:
 "m":    ‘point-to-register’,
 "n":    ‘View-search-last-regexp-forward’,
 "p":    ‘View-search-last-regexp-backward’,
-"q":    ‘nil’,
+"q":    nil,
 "r":    ‘copy-to-register’,
 "s":    ‘emacspeak-hydra-toggle-talkative’,
 "t":    ‘(recenter 0)’,
