--- a/manual/emacspeak_002dadvice.html
+++ b/manual/emacspeak_002dadvice.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!-- Created by GNU Texinfo 6.8, https://www.gnu.org/software/texinfo/ -->
 <head>
@@ -99,18 +99,11 @@
           '#index-emacspeak_002deldoc_002dspeak_002ddoc' class=
           'copiable-anchor'>¶</a></span></dt>
           <dd>
-            <dl compact="compact">
-              <dt id='index-C_002d_002c-_002c'><span><kbd>C-,
-              ,</kbd> <a href='#index-C_002d_002c-_002c' class=
-              'copiable-anchor'>¶</a></span></dt>
-              <dt id='index-C_002dx-_0040-a-_002c'><span><kbd>C-x @
-              a ,</kbd> <a href='#index-C_002dx-_0040-a-_002c'
-              class='copiable-anchor'>¶</a></span></dt>
-            </dl><span id=
+            <span id=
             "index-emacspeak_002deldoc_002dspeak_002ddoc-1"></span>
             <div class="format">
               <pre class=
-              "format">Speak Eldoc documentation if available.
+              "format">Speak cached Eldoc documentation if available.
 </pre>
             </div>
           </dd>
