--- a/manual/emacspeak.html
+++ b/manual/emacspeak.html
@@ -127,6 +127,16 @@ Interactive PREFIX arg means toggle the global default value.
           launches.</p>
         </dd>
       </dl>
+      <dl class="def">
+        <dt id="index-User-Option-16"><span class=
+        "category">Variable:</span> <span><strong>User
+        Option</strong> <em>emacspeak-soundscapes</em> <a href=
+        '#index-User-Option-16' class=
+        'copiable-anchor'>¶</a></span></dt>
+        <dd>
+          <p>Whether we should turn on soundscapes.</p>
+        </dd>
+      </dl>
     </div>
   </div>
 </body>
